<resources>
    <string name="app_name">Transect</string>
    <string name="intro">Welcome to Hui Kilo Koholā transect app and mahalo for helping us monitor humpback whales in Hawaii. This app will help provide you with a simple means to log humpback whale sightings during a linear transit between two points meeting the following criteria:</string>
    <string name="detailed_instructions">Detailed Instructions</string>
    <string name="summary_stats">Summary Stats</string>
    <string name="start_new_transect">Start New Transect</string>
    <string name="bearing">Bearing</string>
    <string name="instructions_title">Hui Kilo Koholā Transect App</string>
    <string name="criteria1">1. Trip not interrupted (e.g., vessel stopped for viewing a whale or for other reasons for more than a few minutes). Note: If interrupted for more than a few minutes, the transect can be stopped and a new one started.</string>
    <string name="criteria2"><![CDATA[2. Beaufort sea state of 5 or less (< 21 kts).]]></string>
    <string name="criteria3">3. Visibility of 5 miles or greater.</string>
    <string name="criteria4">4. Glare on water of less than 50% (90 of 180 degrees arc being viewed).</string>
    <string name="criteria5">5. Use of an observer(s) with required training.</string>
    <string name="criteria_overview">If these conditions are met and able to proceed, please select the Start tab and log-in your vessel and observer(s).</string>
    <string name="channel_name">Unsaved Transect</string>
    <string name="channel_description">Notification if the transect was not saved remotely</string>
    <string name="notification_title">Unsaved Transect(s)</string>
    <string name="notification_message">Click to save transects</string>
</resources>